Fix mobile month selector: fixed width so arrows don't shift

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -98,7 +98,7 @@ a {
 
 .cal-mobile-month {
   font-weight: 700;
-  min-width: 8rem;
+  width: 14rem;
   text-align: center;
 }
 
